--- a/.circleci/config.yaml
+++ b/.circleci/config.yaml
@@ -9,6 +9,21 @@ orbs:
   node: circleci/node@4.7
 
 jobs:
+  print-hello:
+    docker:
+      -image: circleci/node:13.8.0
+    steps:
+      -run:
+        command:
+          echo("hello Bobba!")
+  Print-world:
+    docker:
+      -image: circleci/node:13.8.0
+    steps:
+      -run:
+        command:
+          echo("hello Bobba!")
+
   # Below is the definition of your job to build and test your app, you can rename and customize it as you want.
   build-and-test:
     # These next lines define a Docker executor: https://circleci.com/docs/2.0/executor-types/
@@ -40,3 +55,5 @@ workflows:
       - build-and-test
       # For running simple node tests, you could optionally use the node/test job from the orb to replicate and replace the job above in fewer lines.
       # - node/test
+      - print-hello
+      - print-world
