--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - run:
           command:
             echo("hello Bobba!")
-  Print-world:
+  print-world:
     docker:
       - image: circleci/node:13.8.0
     steps:
