--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,14 +13,14 @@ jobs:
     steps:
       - run:
           command:
-            echo("hello Bobba!")
+            print("hello Bobba!")
   print-world:
     docker:
       - image: circleci/node:13.8.0
     steps:
       - run:
           command:
-            echo("hello Bobba!")
+            print("hello Bobba!")
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
