--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,10 @@ workflows:
     # Inside the workflow, you define the jobs you want to run.
     jobs:
       - print-hello
-      - print-world
+      - print-world:
+          requires:
+            - print-hello
+
       - node/test:
           # This is the node version to use for the `cimg/node` tag
           # Relevant tags can be found on the CircleCI Developer Hub
