workspace-global-var

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,25 @@ jobs:
           command: |
             echo $myvar
 
+  save_hello_world_output:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - run: echo "Hello new world." > ~/output.txt
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - output.txt
+
+  print_output_file:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - attach_workspace:
+          at: ~/
+      - run: cat ~/output.txt
+          
+
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
@@ -43,6 +62,11 @@ workflows:
             - print-hello
       - print-env-var
 
+      - save_hello_world_output
+      - print_output_file:
+          requires:
+            - save_hello_world_output
+      
       - node/test:
           # This is the node version to use for the `cimg/node` tag
           # Relevant tags can be found on the CircleCI Developer Hub
